--- a/index.html
+++ b/index.html
@@ -27,11 +27,6 @@
 		</ul>
 	</div>
 
-	<!-- A reutiliser pour javascipt quand la page sera sympa
-
-	<ul class="incidents">
-	</ul>
--->
 
 	<button class="btn-ajouter">
 		+ Nouveau
@@ -53,7 +48,8 @@
 	</ul>
 
 	<!-- Script JS -->
-	<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+	<!-- remote version of jQuery <script src="//code.jquery.com/jquery-1.11.3.min.js"></script> -->
+	<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
 
