update Script location in Index (need to learn how to amend...)

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 	</ul>
 
 	<!-- Script JS -->
-	<!-- remote version of jQuery <script src="//code.jquery.com/jquery-1.11.3.min.js"></script> -->
-	<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
+	<!-- remote version of jQuery --> <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+	<!-- local version of jQuery --> <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
 
